Flink-TornadoVM/null/var/opencl-logs/device-0-0/s3.t3-map.log
2:6:3: error: use of type 'double' requires cl_khr_fp64 extension to be enabled
  double d_20, d_12, d_11; 
  ^
2:32:7: error: use of undeclared identifier 'd_11'
      d_11  =  *((__global double *) ul_10);
      ^
2:32:28: error: use of type 'double' requires cl_khr_fp64 extension to be enabled
      d_11  =  *((__global double *) ul_10);
                           ^
2:33:7: error: use of undeclared identifier 'd_12'
      d_12  =  d_11 + d_11;
      ^
2:33:16: error: use of undeclared identifier 'd_11'
      d_12  =  d_11 + d_11;
               ^
2:33:23: error: use of undeclared identifier 'd_11'
      d_12  =  d_11 + d_11;
                      ^
2:34:19: error: use of type 'double' requires cl_khr_fp64 extension to be enabled
      *((__global double *) ul_10)  =  d_12;
                  ^
2:34:40: error: use of undeclared identifier 'd_12'
      *((__global double *) ul_10)  =  d_12;
                                       ^
2:35:7: error: use of undeclared identifier 'd_11'
      d_11  =  d_12;
      ^
2:35:16: error: use of undeclared identifier 'd_12'
      d_11  =  d_12;
               ^
2:46:26: error: use of type 'double' requires cl_khr_fp64 extension to be enabled
    d_20  =  *((__global double *) ul_19);
                         ^
2:48:17: error: use of type 'double' requires cl_khr_fp64 extension to be enabled
    *((__global double *) ul_21)  =  d_20;
                ^